--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 		"build": "webpack --env.prod"
 	},
 	"dependencies": {
-		"vue": "^3.0.0-alpha.4"
+		"node-sass": "^4.13.1",
+		"vue": "^3.0.0-alpha.7"
 	},
 	"devDependencies": {
 		"@vue/compiler-sfc": "^3.0.0-alpha.4",
